Corrijo rutas y vinculo navegación entre páginas

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarMatteo">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="./pages/Sucursales.html">Sucursales</a></li>
-          <li class="nav-item"><a class="nav-link" href="./pages/Ropa.html">Ropa</a></li>
-          <li class="nav-item"><a class="nav-link" href="./pages/Calzado.html">Calzado</a></li>
-          <li class="nav-item"><a class="nav-link" href="./pages/Contacto.html">Contacto</a></li>
+         <li class="nav-item"><a class="nav-link" href="./pages/sucursales.html">Sucursales</a></li>
+         <li class="nav-item"><a class="nav-link" href="./pages/ropa.html">Ropa</a></li>
+         <li class="nav-item"><a class="nav-link" href="./pages/calzado.html">Calzado</a></li>
+         <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
