--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarMatteo">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+         <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
          <li class="nav-item"><a class="nav-link" href="./pages/sucursales.html">Sucursales</a></li>
          <li class="nav-item"><a class="nav-link" href="./pages/ropa.html">Ropa</a></li>
          <li class="nav-item"><a class="nav-link" href="./pages/calzado.html">Calzado</a></li>
