--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -1,20 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <title>Matteo store</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Título de la página</title>
+  <link rel="stylesheet" href="../css/style.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body> <nav>
-        <ul>
-            <li><a href="../index.html">inicio</a></li>
-            <li><a href="sucursales.html">sucursales</a></li>
-            <li><a href="ropa.html">ropa</a></li>
-            <li><a href="calzado.html">calzado</a></li>
-            <li><a href="contacto.html">contacto</a></li>
+<body>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../img/matteologotipo.png" alt="Matteo Store" width="120" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMatteo" aria-controls="navbarMatteo" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMatteo">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="sucursales.html">Sucursales</a></li>
+          <li class="nav-item"><a class="nav-link" href="ropa.html">Ropa</a></li>
+          <li class="nav-item"><a class="nav-link" href="calzado.html">Calzado</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         </ul>
-    
-        <header>
-            <h1>Proximamente..</h1>
-        </header>
+      </div>
+    </div>
+  </nav>
+
+  <!-- HEADER -->
+  <header class="index-header">
+    <section class="contenedor-inferior-header">
+      <h1 class="index-h1">¡Bienvenidos a Matteo Store!</h1>
+      <p class="index-parrafoheader">
+        Matteo Store es un emprendimiento familiar dedicado a ofrecer ropa cómoda y moderna para bebés y niños, con el cariño que se merecen. Descubrí nuestra exclusiva colección otoño-invierno, pensada para abrigarlos con estilo.
+      </p>
+      <button class="btn-header">Ver Colección</button>
+    </section>
+  </header>
+
+  <!-- MAIN-->
+  <main>
+    <div class="container my-4">
+      <h2 class="titulo-main text-center">Título de sección</h2>
+      <p class="text-center">Aquí irá el contenido específico (productos, descripción, formularios…)</p>
+     
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="footer-contenido container">
+      <div class="parent">
+        <div class="footer-item">
+          <h4>Preguntas frecuentes</h4>
+          <p>Información sobre envíos, talles y medios de pago.</p>
+        </div>
+        <div class="footer-item">
+          <h4>Protocolo de devolución</h4>
+          <p>Conocé cómo realizar cambios o devoluciones fácilmente.</p>
+        </div>
+        <div class="div1">
+          <h4>Contacto rápido</h4>
+          <p>Escribinos por WhatsApp o en redes sociales.</p>
+        </div>
+      </div>
+      <p class="derechos-footer py-3 m-0">&copy; 2025 Matteo Store. Todos los derechos reservados.</p>
+      <div class="footer-logos d-flex justify-content-center gap-3">
+        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo-footer" src="../img/logoig.avif" alt="Instagram" />
+        </a>
+        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo-footer" src="../img/logofacebook.jpg" alt="Facebook" />
+        </a>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo-footer" src="../img/logox.avif" alt="X" />
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- WhatsApp fijo -->
+  <a href="https://wa.me/5491165767248" target="_blank" class="whatsapp-float" aria-label="Chat en WhatsApp">
+    <img src="../img/whatsappicon.webp" alt="WhatsApp" />
+  </a>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
