--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,21 +1,156 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <title>Matteo store</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto - Matteo Store</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../index.html">inicio</a></li>
-            <li><a href="sucursales.html">sucursales</a></li>
-            <li><a href="ropa.html">ropa</a></li>
-            <li><a href="calzado.html">calzado</a></li>
-            <li><a href="contacto.html">contacto</a></li>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../img/matteologotipo.png" alt="Matteo Store" width="120">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMatteo">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMatteo">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="sucursales.html">Sucursales</a></li>
+          <li class="nav-item"><a class="nav-link" href="ropa.html">Ropa</a></li>
+          <li class="nav-item"><a class="nav-link" href="calzado.html">Calzado</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a></li>
         </ul>
-    
-        <header>
-            <h1>Proximamente..</h1>
-        </header>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Sección de Contacto -->
+  <main class="contacto-main">
+    <section class="container py-5">
+      <div class="row">
+        <!-- Formulario -->
+        <div class="col-lg-6 mb-4">
+          <h1 class="mb-4">¡Escríbenos!</h1>
+          <form id="form-contacto">
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+              <label for="mensaje" class="form-label">Mensaje</label>
+              <textarea class="form-control" id="mensaje" rows="5" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-enviar">Enviar Mensaje</button>
+          </form>
+        </div>
+
+        <!-- Info de Contacto -->
+        <div class="col-lg-6">
+          <div class="contacto-info p-4">
+            <h2 class="mb-4">Otras formas de contacto</h2>
+            
+            <div class="d-flex align-items-start mb-4">
+              <div class="me-3">
+                <img src="../img/icon-whatsapp.svg" alt="WhatsApp" width="30">
+              </div>
+              <div>
+                <h3 class="h5">WhatsApp</h3>
+                <p><a href="https://wa.me/5491165767248" target="_blank">+54 9 11 6576-7248</a></p>
+              </div>
+            </div>
+
+            <div class="d-flex align-items-start mb-4">
+              <div class="me-3">
+                <img src="../img/icon-email.svg" alt="Email" width="30">
+              </div>
+              <div>
+                <h3 class="h5">Email</h3>
+                <p><a href="mailto:info@matteostore.com">info@matteostore.com</a></p>
+              </div>
+            </div>
+
+            <div class="d-flex align-items-start">
+              <div class="me-3">
+                <img src="../img/icon-location.svg" alt="Ubicación" width="30">
+              </div>
+              <div>
+                <h3 class="h5">Visítanos</h3>
+                <p>Av. Corrientes 1234, Buenos Aires</p>
+                <iframe 
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168878894546!2d-58.383759!3d-34.603734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1234567890123!5m2!1ses!2sar" 
+                  width="100%" 
+                  height="200" 
+                  style="border:0;" 
+                  allowfullscreen="" 
+                  loading="lazy">
+                </iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+
+    <div class="footer-contenido container">
+      <div class="parent">
+        <div class="footer-item">
+          <h4>Preguntas frecuentes</h4>
+          <p>Información sobre envíos, talles y medios de pago.</p>
+        </div>
+        <div class="footer-item">
+          <h4>Protocolo de devolución</h4>
+          <p>Conocé cómo realizar cambios o devoluciones fácilmente.</p>
+        </div>
+        <div class="div1">
+          <h4>Contacto rápido</h4>
+          <p>Escribinos por WhatsApp o en redes sociales.</p>
+        </div>
+      </div>
+
+      <p class="derechos-footer py-3 m-0">&copy; 2025 Matteo Store. Todos los derechos reservados.</p>
+
+      <div class="footer-logos d-flex justify-content-center gap-3">
+        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo-footer" src="../img/logoig.avif" alt="Instagram" />
+        </a>
+        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo-footer" src="../img/logofacebook.jpg" alt="Facebook" />
+        </a>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo-footer" src="../img/logox.avif" alt="X" />
+        </a>
+      </div>
+    </div>
+  </footer>
+  </footer>
+
+  <!-- Botón WhatsApp -->
+  <a href="https://wa.me/5491165767248" class="whatsapp-float">
+    <img src="../img/whatsappicon.webp" alt="WhatsApp">
+  </a>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Validación básica del formulario
+    document.getElementById('form-contacto').addEventListener('submit', function(e) {
+      e.preventDefault();
+      alert('¡Gracias por tu mensaje! Nos contactaremos pronto.');
+      this.reset();
+    });
+  </script>
 </body>
 </html>
