ultima correccion para entrega hasta el 03/08, lo entregue mediante soporte por precaucion ya que a la hora de entregar el jueves, no dejaba clickear en enviar

--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -3,97 +3,217 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sucursales - Matteo Store</title>
+  <!-- Metaetiquetas SEO mejoradas -->
+  <title>Sucursales de Matteo Store | Ropa Infantil en Buenos Aires</title>
+  <meta name="description" content="Encuentra las sucursales de Matteo Store en Buenos Aires. Zona Norte, Centro y Sur. Horarios, direcciones y promociones exclusivas en ropa para bebés.">
+  <meta name="keywords" content="sucursales Matteo Store, ropa infantil Buenos Aires, tiendas bebé Zona Norte, moda niños CABA">
+  <meta name="robots" content="index, follow">
+  <!-- Preload para fuentes -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="stylesheet" href="../css/style.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Schema Markup para negocio local -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Store",
+    "name": "Matteo Store",
+    "description": "Tienda de ropa y calzado para bebés y niños",
+    "url": "https://matteostore.com",
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Promociones",
+      "itemListElement": [
+        {
+          "@type": "OfferCatalog",
+          "name": "3x2 en prendas"
+        },
+        {
+          "@type": "OfferCatalog",
+          "name": "2x1 en calzados"
+        }
+      ]
+    },
+    "location": [
+      {
+        "@type": "Place",
+        "name": "Sucursal Zona Norte",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Unicenter Shopping",
+          "addressLocality": "Buenos Aires",
+          "addressRegion": "BA"
+        }
+      },
+      {
+        "@type": "Place",
+        "name": "Sucursal Zona Centro",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Centro CABA",
+          "addressLocality": "Buenos Aires",
+          "addressRegion": "BA"
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
-      <img src="../img/matteologotipo.png" alt="Matteo Store" width="120">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMatteo" aria-controls="navbarMatteo" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarMatteo">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link active" href="./Sucursales.html">Sucursales</a></li>
-        <li class="nav-item"><a class="nav-link" href="./Ropa.html">Ropa</a></li>
-        <li class="nav-item"><a class="nav-link" href="./Calzado.html">Calzado</a></li>
-        <li class="nav-item"><a class="nav-link" href="./Contacto.html">Contacto</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<section class="index-header">
-  <section class="contenedor-inferior-header">
-    <h1 class="index-h1">Nuestras Sucursales</h1>
-    <p class="index-parrafoheader">
-      ¡Encontranos en distintos puntos de Buenos Aires! Visitá la sucursal más cercana para descubrir nuestras colecciones en persona y recibir atención personalizada.
-    </p>
-  </section>
-</section>
-<main class="index-main">
-  <h2 class="titulo-main">Ubicaciones</h2>
-
-  <section class="ultimos-modelos-container">
-  
-    <section class="card-enterito">
-      <h3>Sucursal Zona Norte</h3>
-      <p>Ubicada en Unicenter Shopping, esta sucursal ofrece una gran variedad de productos para bebés y niños.</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.38754584509!2d-58.595323562622085!3d-34.50860775928458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0f189ae4b1b%3A0xa559286e934389b0!2sCheeky%20Unicenter!5e0!3m2!1ses-419!2sar!4v1751578277073!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-
-    <section class="card-enterito">
-      <h3>Sucursal Zona Centro</h3>
-      <p>Ubicada en pleno corazón de la Ciudad de Buenos Aires, ideal para quienes trabajan o viven en el centro.</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26271.7603699085!2d-58.41008320582248!3d-34.604918938435425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacd85b3b31f%3A0xdb0c98d0fe988aec!2sCheeky!5e0!3m2!1ses-419!2sar!4v1751578328701!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-
-    <section class="card-enterito">
-      <h3>Sucursal Zona Sur</h3>
-      <p>En Bernal, nuestra sucursal del sur te espera con las mejores ofertas y colecciones de temporada.</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249720.64969719618!2d-58.666466534972365!3d-34.67789912629239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32dfe2b13eb4d%3A0xe76067baa60862b8!2sCheeky%20Bernal!5e0!3m2!1ses-419!2sar!4v1751578012572!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-  </section>
-</main>
-<footer class="footer">
-  <div class="footer-contenido">
-    <div class="parent">
-      <div class="footer-item">
-        <h4>Preguntas frecuentes</h4>
-        <p>Información sobre envíos, talles y medios de pago.</p>
-      </div>
-      <div class="footer-item">
-        <h4>Protocolo de devolución</h4>
-        <p>Conocé cómo realizar cambios o devoluciones fácilmente.</p>
-      </div>
-      <div class="div1">
-        <h4>Contacto rápido</h4>
-        <p>Escribinos por WhatsApp o en redes sociales.</p>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html" aria-label="Inicio - Matteo Store">
+        <img src="../img/matteologotipo.png" alt="Matteo Store - Ropa infantil" width="120">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMatteo" aria-controls="navbarMatteo" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMatteo">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="./sucursales.html">Sucursales</a></li>
+          <li class="nav-item"><a class="nav-link" href="./ropa.html">Ropa</a></li>
+          <li class="nav-item"><a class="nav-link" href="./calzado.html">Calzado</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+        </ul>
       </div>
     </div>
+  </nav>
 
-    <p class="derechos-footer py-5 m-0">&copy; 2025 Matteo Store. Todos los derechos reservados.</p>
+  <header class="index-header">
+    <section class="contenedor-inferior-header">
+      
+      <h1 class="index-h1">Nuestras Sucursales en Buenos Aires</h1>
+      <p class="index-parrafoheader">
+        ¡Encontranos en distintos puntos de la provincia! Visitá la sucursal más cercana para descubrir nuestras colecciones de ropa para bebés y niños con atención personalizada.
+      </p>
+    </section>
+  </header>
 
-    <div class="footer-logos">
-      <img class="logotipo-footer" src="../img/logoig.avif" alt="Instagram" />
-      <img class="logotipo-footer" src="../img/logofacebook.jpg" alt="Facebook" />
-      <img class="logotipo-footer" src="../img/logox.avif" alt="X" />
+  <main class="index-main">
+   
+    <h2 class="titulo-main">Ubicaciones y Horarios</h2>
+
+    <section class="ultimos-modelos-container">
+      
+      <article class="card-enterito" itemscope itemtype="https://schema.org/Store">
+        <h3 itemprop="name">Sucursal Zona Norte</h3>
+        <p itemprop="description">Ubicada en Unicenter Shopping, esta sucursal ofrece una gran variedad de productos para bebés y niños.</p>
+        <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+          <meta itemprop="streetAddress" content="Unicenter Shopping">
+          <meta itemprop="addressLocality" content="Buenos Aires">
+          <meta itemprop="addressRegion" content="BA">
+        </div>
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.38754584509!2d-58.595323562622085!3d-34.50860775928458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0f189ae4b1b%3A0xa559286e934389b0!2sCheeky%20Unicenter!5e0!3m2!1ses-419!2sar!4v1751578277073!5m2!1ses-419!2sar" 
+          width="100%" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy"
+          title="Mapa de Sucursal Zona Norte - Matteo Store"
+          aria-label="Ubicación de Sucursal Zona Norte">
+        </iframe>
+      </article>
+
+      <article class="card-enterito" itemscope itemtype="https://schema.org/Store">
+        <h3 itemprop="name">Sucursal Zona Centro</h3>
+        <p itemprop="description">Ubicada en pleno corazón de la Ciudad de Buenos Aires, ideal para quienes trabajan o viven en el centro.</p>
+        <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+          <meta itemprop="streetAddress" content="Centro CABA">
+          <meta itemprop="addressLocality" content="Buenos Aires">
+          <meta itemprop="addressRegion" content="BA">
+        </div>
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26271.7603699085!2d-58.41008320582248!3d-34.604918938435425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacd85b3b31f%3A0xdb0c98d0fe988aec!2sCheeky!5e0!3m2!1ses-419!2sar!4v1751578328701!5m2!1ses-419!2sar" 
+          width="100%" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy"
+          title="Mapa de Sucursal Zona Centro - Matteo Store"
+          aria-label="Ubicación de Sucursal Zona Centro">
+        </iframe>
+      </article>
+
+      <article class="card-enterito" itemscope itemtype="https://schema.org/Store">
+        <h3 itemprop="name">Sucursal Zona Sur</h3>
+        <p itemprop="description">En Bernal, nuestra sucursal del sur te espera con las mejores ofertas y colecciones de temporada.</p>
+        <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+          <meta itemprop="streetAddress" content="Bernal">
+          <meta itemprop="addressLocality" content="Buenos Aires">
+          <meta itemprop="addressRegion" content="BA">
+        </div>
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249720.64969719618!2d-58.666466534972365!3d-34.67789912629239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32dfe2b13eb4d%3A0xe76067baa60862b8!2sCheeky%20Bernal!5e0!3m2!1ses-419!2sar!4v1751578012572!5m2!1ses-419!2sar" 
+          width="100%" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy"
+          title="Mapa de Sucursal Zona Sur - Matteo Store"
+          aria-label="Ubicación de Sucursal Zona Sur">
+        </iframe>
+      </article>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-contenido container">
+      <div class="row">
+        <!-- Bloque 1: Preguntas frecuentes -->
+        <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
+          <h4>Preguntas frecuentes</h4>
+          <p><a href="./Contacto.html#faq">Información sobre envíos, talles y medios de pago</a>.</p>
+        </div>
+
+        <!-- Bloque 2: Devoluciones -->
+        <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
+          <h4>Protocolo de devolución</h4>
+          <p><a href="./Contacto.html#devoluciones">Cómo realizar cambios o devoluciones</a>.</p>
+        </div>
+
+        <!-- Bloque 3: Contacto -->
+        <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
+          <h4>Contacto rápido</h4>
+          <p><a href="https://wa.me/5491165767248">WhatsApp</a> | <a href="./Contacto.html">Formulario</a></p>
+        </div>
+
+        <!-- Mapa del sitio -->
+        <div class="col-md-3 text-center text-md-start">
+          <h4 class="text-center text-md-start">Mapa del Sitio</h4>
+          <ul class="list-unstyled text-center text-md-start">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./Ropa.html">Ropa para bebé</a></li>
+            <li><a href="./Calzado.html">Calzado infantil</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <p class="derechos-footer py-3 m-0 text-center">&copy; 2025 Matteo Store. Todos los derechos reservados.</p>
+
+      <!-- Redes sociales -->
+      <div class="footer-logos d-flex justify-content-center gap-3">
+        <a href="https://www.instagram.com/matteostore" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <img class="logotipo-footer" src="../img/logoig.avif" alt="Instagram Matteo Store" loading="lazy"/>
+        </a>
+        <a href="https://www.facebook.com/matteostore" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <img class="logotipo-footer" src="../img/logofacebook.jpg" alt="Facebook Matteo Store" loading="lazy"/>
+        </a>
+        <a href="https://www.twitter.com/matteostore" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+          <img class="logotipo-footer" src="../img/logox.avif" alt="Twitter Matteo Store" loading="lazy"/>
+        </a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-<a href="https://wa.me/5491165767248" target="_blank" class="whatsapp-float" aria-label="Chat en WhatsApp">
-  <img src="../img/whatsappicon.webp" alt="WhatsApp" />
-</a>
+  <a href="https://wa.me/5491165767248" target="_blank" class="whatsapp-float" aria-label="Chat en WhatsApp">
+    <img src="../img/whatsappicon.webp" alt="Contacto por WhatsApp" loading="lazy"/>
+  </a>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
