--- a/index.html
+++ b/index.html
@@ -3,18 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Matteo Store</title>
+  <!-- Metaetiquetas SEO mejoradas -->
+  <title>Matteo Store | Ropa y Calzado para Bebés y Niños | Argentina</title>
+  <meta name="description" content="Matteo Store: Ropa y calzado premium para bebés y niños. Envíos a todo el país. ¡3x2 en prendas y 2x1 en calzados!">
+  <meta name="keywords" content="ropa bebé, calzado infantil, moda niños, ofertas ropa infantil, emprendimiento familiar">
+  <meta name="robots" content="index, follow">
+  <!-- Preload para fuentes y CSS -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="stylesheet" href="./css/style.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Schema Markup para rich snippets -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Store",
+    "name": "Matteo Store",
+    "description": "Ropa y calzado premium para bebés y niños.",
+    "url": "https://matteostore.com",
+    "priceRange": "$$",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Ciudad, Argentina"
+    }
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">
-        <img src="./img/matteologotipo.png" alt="Matteo Store" width="120" />
+      <a class="navbar-brand" href="./index.html" aria-label="Inicio - Matteo Store">
+        <img src="./img/matteologotipo.png" alt="Matteo Store - Ropa infantil" width="120" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMatteo" aria-controls="navbarMatteo" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -30,9 +50,11 @@
       </div>
     </div>
   </nav>
+
   <header class="index-header">
     <section class="contenedor-inferior-header">
-      <h1 class="index-h1">¡Bienvenidos a Matteo Store!</h1>
+      
+      <h1 class="index-h1">¡Bienvenidos a Matteo Store - Ropa Infantil con Estilo!</h1>
       <p class="index-parrafoheader">
         Matteo Store es un emprendimiento familiar dedicado a ofrecer ropa cómoda y moderna para bebés y niños, con el cariño que se merecen. Descubrí nuestra exclusiva colección otoño-invierno, pensada para abrigarlos con estilo.
       </p>
@@ -41,87 +63,105 @@
   </header>
 
   <main class="index-main">
-    <h2 class="titulo-main">¡Armá tu look!</h2>
-    <h3 class="titulo-main">3x2 en prendas y accesorios - 2x1 en calzados</h3>
+    
+    <h2 class="titulo-main">Ofertas Exclusivas en Ropa y Calzado Infantil</h2>
+    <h3 class="titulo-main">Promociones: 3x2 en prendas y 2x1 en calzados</h3>
 
     <section class="ultimos-modelos-container">
-
-      <section class="card-enterito">
-        <img src="./img/enteritominipielcita.webp" alt="Enterito mini de plush" />
-        <h4>Descripción</h4>
+      <!-- Productos con alt text mejorado y estructura semántica -->
+      <article class="card-enterito"> 
+        <img src="./img/enteritominipielcita.webp" alt="Enterito de pielcita para bebé - Matteo Store" />
+        <h4>Enterito Mini de Pielcita</h4> <!-- Título descriptivo -->
         <p>Enterito de pielcita bifaz. Con cierre en delantero. Composición: 100% poliéster. Talles: del M al XXL. Origen: Nacional.</p>
         <p class="card-enterito-precio">$25.000 <span>$35.000</span></p>
         <button class="btn-card-enterito">Añadir al carrito</button>
-      </section>
+      </article>
 
-      <section class="card-enterito">
-        <img src="./img/bodyminiaventura.webp" alt="Body mini aventura" />
-        <h4>Descripción</h4>
+      <article class="card-enterito">
+        <img src="./img/bodyminiaventura.webp" alt="Body mini aventura de algodón para bebé" />
+        <h4>Body Mini Aventura</h4>
         <p>Body de jersey, tiene broche en escote para su acceso. Con estampa plana. Composición: 100% algodón. Talles: del S al XXL. Origen: Nacional.</p>
         <p class="card-enterito-precio">$21.900 <span>$29.000</span></p>
         <button class="btn-card-enterito">Añadir al carrito</button>
-      </section>
+      </article>
 
-      <section class="card-enterito">
-        <img src="./img/zapaminisportgirldel19al24.webp" alt="Zapatilla de nena sport girl" />
-        <h4>Descripción</h4>
+      <article class="card-enterito">
+        <img src="./img/zapaminisportgirldel19al24.webp" alt="Zapatilla deportiva para niña - Colección Sport Girl" />
+        <h4>Zapatilla Sport Girl</h4>
         <p>Zapatilla de capellada textil simil gamuza con apliques decorativos sintéticos con brillo. Ajuste con cordones extra suaves. Suela sintética. Horma estándar. Talles: del 19 al 24. Origen: Nacional.</p>
         <p class="card-enterito-precio">$42.000 <span>$55.000</span></p>
         <button class="btn-card-enterito">Añadir al carrito</button>
-      </section>
+      </article>
 
-      <section class="card-enterito">
-        <img src="./img/zapaminisoft.webp" alt="Zapatilla mini soft" />
-        <h4>Descripción</h4>
+      <article class="card-enterito">
+        <img src="./img/zapaminisoft.webp" alt="Zapatilla infantil soft con velcro" />
+        <h4>Zapatilla Mini Soft</h4>
         <p>Zapatilla de capellada textil simil gamuza con recortes sintéticos. Ajuste con velcros. Suela sintética. Horma estándar. Talles: del 20 al 24. Origen: Nacional.</p>
         <p class="card-enterito-precio">$42.000 <span>$55.000</span></p>
         <button class="btn-card-enterito">Añadir al carrito</button>
-      </section>
+      </article>
 
-      <section class="card-enterito">
-        <img src="./img/camisaminimanhattan.webp" alt="Camisa mini manhattan escocesa" />
-        <h4>Descripción</h4>
+      <article class="card-enterito">
+        <img src="./img/camisaminimanhattan.webp" alt="Camisa escocesa para niño - Colección Manhattan" />
+        <h4>Camisa Mini Manhattan</h4>
         <p>Camisa de viyela escocesa, tiene botones en cartera y puños. Composición: 100% algodón. Talles: del L al XXL. Origen: Importado.</p>
         <p class="card-enterito-precio">$30.000 <span>$38.000</span></p>
         <button class="btn-card-enterito">Añadir al carrito</button>
-      </section>
+      </article>
     </section>
   </main>
+
   <footer class="footer">
     <div class="footer-contenido container">
-      <div class="parent">
-        <div class="footer-item">
+      <div class="row"> 
+        <!-- Bloque 1: Preguntas frecuentes -->
+        <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
           <h4>Preguntas frecuentes</h4>
-          <p>Información sobre envíos, talles y medios de pago.</p>
+          <p><a href="./pages/contacto.html#faq">Información sobre envíos, talles y medios de pago</a>.</p>
         </div>
-        <div class="footer-item">
+
+        <!-- Bloque 2: Devoluciones -->
+        <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
           <h4>Protocolo de devolución</h4>
-          <p>Conocé cómo realizar cambios o devoluciones fácilmente.</p>
+          <p><a href="./pages/contacto.html#devoluciones">Cómo realizar cambios o devoluciones</a>.</p>
         </div>
-        <div class="div1">
+
+        <!-- Bloque 3: Contacto -->
+        <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
           <h4>Contacto rápido</h4>
-          <p>Escribinos por WhatsApp o en redes sociales.</p>
+          <p><a href="https://wa.me/5491165767248">WhatsApp</a> | <a href="./pages/contacto.html">Formulario</a></p>
+        </div>
+
+        <!-- Mapa del sitio  -->
+        <div class="col-md-3 text-center text-md-start">
+          <h4 class="text-center text-md-start">Mapa del Sitio</h4>
+          <ul class="list-unstyled text-center text-md-start">
+            <li><a href="./pages/ropa.html">Ropa para bebé</a></li>
+            <li><a href="./pages/calzado.html">Calzado infantil</a></li>
+            <li><a href="./pages/sucursales.html">Nuestras tiendas</a></li>
+          </ul>
         </div>
       </div>
 
-      <p class="derechos-footer py-3 m-0">&copy; 2025 Matteo Store. Todos los derechos reservados.</p>
+      <p class="derechos-footer py-3 m-0 text-center">&copy; 2025 Matteo Store. Todos los derechos reservados.</p>
 
+      <!-- Redes sociales -->
       <div class="footer-logos d-flex justify-content-center gap-3">
-        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-          <img class="logotipo-footer" src="./img/logoig.avif" alt="Instagram" />
+        <a href="https://www.instagram.com/matteostore" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <img class="logotipo-footer" src="./img/logoig.avif" alt="Instagram Matteo Store" />
         </a>
-        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
-          <img class="logotipo-footer" src="./img/logofacebook.jpg" alt="Facebook" />
+        <a href="https://www.facebook.com/matteostore" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <img class="logotipo-footer" src="./img/logofacebook.jpg" alt="Facebook Matteo Store" />
         </a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
-          <img class="logotipo-footer" src="./img/logox.avif" alt="X" />
+        <a href="https://www.twitter.com/matteostore" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+          <img class="logotipo-footer" src="./img/logox.avif" alt="Twitter Matteo Store" />
         </a>
       </div>
     </div>
   </footer>
 
   <a href="https://wa.me/5491165767248" target="_blank" class="whatsapp-float" aria-label="Chat en WhatsApp">
-    <img src="./img/whatsappicon.webp" alt="WhatsApp" />
+    <img src="./img/whatsappicon.webp" alt="Contacto por WhatsApp" />
   </a>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
